# cpp_project_template

./: CMakeLists.txt
src/: main.cpp
src/calculator/: calculator.hpp
test/: CMakeLists.txt  tests.cpp
